GH-4224 add support for sh:alternatePath and sequence paths